--- a/index.html
+++ b/index.html
@@ -1,13 +1,88 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
     <head>
         <meta charset="utf-8">
-        <title>Meu titulo</title>
-
-        <link href="estilos.css" rel="stylesheet">
-
+        <title>Desenvolvimento Ambiental</title>
+        <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
+
     <body>
-        <h1>Olá mundo</h1>
+        <nav>
+            <p>IEMA</p>
+            <ul>
+                <li><a href="#serviços">SERVIÇOS</a></li>
+                <li><a href="#clientes">CLIENTES<a></li>
+                <li><a href="#parceiros">PARCEIROS<a></li>
+                <li><a href="#time">TIME<a></li>
+                <li><a href="#conteudo">CONTEUDO<a></li>
+                <li><a href="#contato">CONTATO<a></li>
+            </ul>
+        </nav>
+
+        <header>
+            <h1>Minha pagina</h1>
+            <p>Oferecemos recursos e competencias 
+                de sustentabilidade</p>
+        </header>
+        <img src="img/sus.jpg">
+
+        <section id="serviços">
+            <h2>SERVIÇOS</h2>
+            <pp>Oferecemos os melhores serviços em desenvolvimento de sustentabilidade</pp>
+
+        </section>
+        <img src="img/sus.2.jpg" width="200px">
+
+        <section id="clientes">
+            <h2>CLIENTES</h2>
+            <p>Clientes de todas as idades 
+                com visão em utilizar os métodos de sustentabilidade</p>
+        </section>
+        <img src="img/cli.jpg" width="300px">
+
+        <section id="parceiros">
+            <h2>PARCEIROS</h2>
+            <p>Em parceria com o Instituto Estadual de Educação, Ciência e Tecnologia do Maranhão</p>
+        </section>
+        <div>
+            <a href="http://www.iema.ma.gov.br/" target="_blank"><img src="img/par2.jpg"><a>
+        <div>
+            <img src="img/parceria1.jpg">
+        <div>
+            <section id="time">
+                <h2>TIME</h2>
+                <p>Técnicos em Meio Ambiente</p>
+                <img src="img/71566468a8204faea5ab33ba383aed38.jpg"width="300px">
+
+            </section>
+            <section id="conteudo">
+                <h2>CONTEÚDO</h2>
+                <p><a href="https://www.todamateria.com.br/educacao-ambiental/" target="_blank">Educação Ambiental</a></p>
+                <p><a href="https://www.ecycle.com.br/2046-reciclagem/" target="_blank">Reciclagem</a></p>
+                <p><a href="https://www.ecycle.com.br/2368-compostagem.html/" target="_blank">Compostagem</a></p>
+                <p><a href="https://brasilescola.uol.com.br/o-que-e/biologia/o-que-e-ecologia.htm/" target="_blank">Ecologia</a></p>
+            </section>
+            <div>
+            <img src="img/eco2.jpg">
+            <div>
+                <img src="img/eco1.jpg"> 
+                <div>
+                    <section id="contato">
+                        <h2>CONTATO</h2>
+                        <p>Entre em contato conosco</p>
+                        <div>
+                            <img src="img/email" class="img_padrao">
+                            <p><a href="mailto:cauaveloso@outlook.com">cauaveloso@outlook.com</a></p>
+                            <div>
+                                <div>
+                                    <img src="img/tel" class="img_padrao"
+                                    <p><a href="tel:9999999999">(99) 999999999</a></p>
+
+                        
+         <footer>
+              <p>Desenvolvido por Cauã Veloso</p>
+        </footer>
+       
     </body>
+
 </html>
